# coronagraph

./: .gitignore  404.html  CHANGELOG.md  README.md  ROADMAP.md  coronagraph-paraxial.py  coronagraph_paraxial.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
Vignetting/: index.html
api/: index.html
coronagraph_theory/: index.html
docs/: Vignetting.ipynb  api.md  coronagraph_theory.md  index.md  jupyter_test1.ipynb
jupyter_test1/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/search/: search_index.json
src/coronagraph/: __init__.py  coronagraph_paraxial.py
tests/: test0.py  test1.py  test_vignetting.py
