[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coronagraph"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
